Fixing .services .container .serviceBx image cropped Adding z-index: 1;

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 .services .container .serviceBx img
 {
